tests/paczka1/fuzzy1/29801644.err
Error in line 1: Ei9XySKA A898 41,7
Error in line 7: Ei9XySKA S919 79,3
Error in line 15: 4585 A898 94,0
Error in line 10: ETwQVS A898 208,2
Error in line 16: 4585 A443 92,2
Error in line 14: gB0T5szMiQu S385 78,0
Error in line 23: Ei9XySKA AM9M 41,2
Error in line 22: gB0T5szMiQu A898 6,8
Error in line 26: gB0T5szMiQu S919 27,6
Error in line 30: S385 A443 39,4
Error in line 27: 4585 A443 35,4
Error in line 33: 4585 A898 0,7
Error in line 31: ETwQVS S919 29,2
Error in line 35: bLbG A443 23,2
